# FindSpam

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  eslint.config.mjs  package.json  tsconfig.json  turbo.json
apps/ai-engine/: README.md  main.py  pyproject.toml
apps/ai-engine/api/: router.py  schemas.py
apps/ai-engine/core/: config.py
apps/ai-engine/core/ensemble/: __init__.py  base.py  voting.py  weighted.py
apps/ai-engine/core/explainability/: __init__.py  base.py  feature_explainer.py  shap_explainer.py
apps/ai-engine/core/features/: __init__.py  base.py  linguistic.py  registry.py  tfidf.py  url.py
apps/ai-engine/core/models/: __init__.py  base.py  mbert.py  registry.py  rule_engine.py  tfidf_lr.py  xlm_roberta.py
apps/ai-engine/core/preprocessor/: __init__.py  base.py  cleaner.py  language.py  normalizer.py  pipeline.py
apps/ai-engine/core/serving/: __init__.py  batch.py  cache.py  orchestrator.py  predictor.py
apps/ai-engine/core/training/: __init__.py  base.py  feedback_collector.py  pipeline.py
apps/ai-engine/monitoring/: __init__.py  audit.py  metrics.py
apps/api/: README.md  main.py  pyproject.toml
apps/api/core/config/: database.py  redis.py  settings.py
apps/api/core/db/: base.py  enums.py
apps/api/core/events/: bus.py
apps/api/core/exceptions/: base.py  handlers.py
apps/api/core/filters/: __init__.py  base.py
apps/api/core/logging/: setup.py
apps/api/core/middleware/: __init__.py  rate_limit.py  request_id.py  security_headers.py  timing.py
apps/api/core/pagination/: __init__.py  params.py
apps/api/core/realtime/: manager.py
apps/api/core/repository/: base.py
apps/api/core/schemas/: __init__.py  response.py
apps/api/core/security/: dependencies.py  jwt.py  rbac.py
apps/api/core/services/: __init__.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py
apps/api/modules/ai/infrastructure/: models.py
apps/api/modules/ai/presentation/: router.py  schemas.py
apps/api/modules/analytics/infrastructure/: models.py
apps/api/modules/analytics/presentation/: router.py  schemas.py
apps/api/modules/audit/infrastructure/: models.py
apps/api/modules/audit/presentation/: router.py  schemas.py
apps/api/modules/auth/application/: dtos.py
apps/api/modules/auth/domain/: entities.py
apps/api/modules/auth/infrastructure/: models.py  repository.py
apps/api/modules/auth/presentation/: router.py  schemas.py
apps/api/modules/blacklist/infrastructure/: models.py
apps/api/modules/blacklist/presentation/: router.py  schemas.py
apps/api/modules/moderation/infrastructure/: models.py
apps/api/modules/moderation/presentation/: router.py  schemas.py
apps/api/modules/notifications/presentation/: router.py  schemas.py
apps/telegram-bot/: README.md  main.py  pyproject.toml
apps/telegram-bot/core/: api_client.py  config.py  event_bus.py  setup.py
apps/telegram-bot/filters/: __init__.py  admin.py  chat.py  user.py
apps/telegram-bot/handlers/callbacks/: moderation.py
apps/telegram-bot/handlers/commands/: moderation.py  settings.py  start.py  stats.py
apps/telegram-bot/handlers/events/: new_member.py
apps/telegram-bot/handlers/messages/: text.py
apps/telegram-bot/keyboards/inline/: __init__.py  moderation.py  settings.py
apps/telegram-bot/locales/: __init__.py  en.py  ru.py  uz_cyr.py  uz_lat.py
apps/telegram-bot/middlewares/: logging.py  rate_limiter.py  spam_detector.py
apps/telegram-bot/services/: __init__.py  anti_raid.py  audit_service.py  flood_detector.py  group_service.py  moderation_service.py
apps/telegram-bot/states/: __init__.py  settings.py
(+96 files in other folders)
