[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "findspam-ai-engine"
version = "1.0.0"
description = "FindSpam hybrid AI inference engine — XLM-RoBERTa + mBERT + TF-IDF ensemble"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "tokenizers>=0.20.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.1.0",
    "shap>=0.46.0",
    "langdetect>=1.0.9",
    "onnxruntime>=1.19.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "jupyter>=1.0.0",
    "datasets>=3.1.0",
    "evaluate>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
